Fix source date alignment.

--- a/full_rubik_style.scss
+++ b/full_rubik_style.scss
@@ -1093,6 +1093,8 @@ ul.field-collection-view-links {
   }
   label {
     margin-right: 5px;
+    display: table;
+    width: auto;
   }
 }
 .pane-profile2-field-source-notes {
